Added search and mic icons. Styled buttons

--- a/google.html
+++ b/google.html
@@ -13,12 +13,14 @@
         <div>
             <form class="centered-horizontally" action="" method="POST">
                 <div class="fill-container-width border-radius position-relative">
+                    <img id="search-icon" class="centered-vertically" src="assets/search-icon.png">
                     <input class="centered" type="text" id="search-term" name="search-term">
+                    <img id="mic-icon" class="centered-vertically" src="assets/mic-icon.png">
                 </div>
                 <div class="centered-horizontally" id="search-button-container">
-                    <input class="position-left" type="submit" value="Google Search" id="search-submit"
+                    <input class="position-left large-button" id="search-button" type="submit" value="Google Search" id="search-submit"
                         name="search-submit">
-                    <input class="position-right" type="submit" value="I'm Feeling Lucky" id="lucky-submit"
+                    <input class="position-right large-button" id="lucky-button" type="submit" value="I'm Feeling Lucky" id="lucky-submit"
                         name="lucky-submit">
                 </div>
             </form>
