--- a/google.html
+++ b/google.html
@@ -3,11 +3,15 @@
 <head>
     <title>Google</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav></nav>
+    <nav>
+        <a href="#">Gmail</a>
+        <a href="#">Images</a>
+    </nav>
     <div>
         <img class="centered-horizontally" src="assets/google-logo.png">
         <div>
